Fix title alignment of tasks in dashboard

--- a/app/resources/sass/app.scss
+++ b/app/resources/sass/app.scss
@@ -1853,6 +1853,10 @@ fieldset .field {
     color: rgb(100, 100, 100);
 }
 
+.task-header-title-dashboard {
+    float: left;
+}
+
 .task-header-action {
     position: relative;
     display: inline-block;
